brdf实现，图片保存实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ find_package(Qt6 COMPONENTS Widgets)
 find_package(Qt6 COMPONENTS OpenGL)
 find_package(Qt6 COMPONENTS OpenGLWidgets)
 find_package(Qt6 COMPONENTS Concurrent)
-find_package(assimp MODULE REQUIRED)
+find_package(ASSIMP MODULE REQUIRED)
+find_package(OIDN MODULE REQUIRED)
 find_package(OpenMP REQUIRED)
 
 
@@ -27,7 +28,10 @@ file(GLOB_RECURSE inc_files ${CMAKE_CURRENT_SOURCE_DIR}/src/include/*.h)
 file(GLOB_RECURSE gizmo_src_files ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/libgizmo/*.cpp)
 file(GLOB_RECURSE gizmo_inc_files ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/libgizmo/*.h)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/include ${ASSIMP_INCLUDE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/include 
+                ${ASSIMP_INCLUDE_DIR} 
+                ${OIDN_INCLUDE_DIR}
+)
 
 qt_add_resources(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources/shader/shader.qrc
     ${CMAKE_CURRENT_SOURCE_DIR}/resources/theme/dark/darkstyle.qrc
@@ -38,9 +42,14 @@ qt_add_resources(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources/shader/shader.qrc
     ${CMAKE_CURRENT_SOURCE_DIR}/resources/skybox/cubemap/Standard-Cube-Map1/skybox.qrc
 )
 
-add_executable(${PROJECT_NAME} ${inc_files} ${src_files} ${gizmo_inc_files} ${gizmo_src_files} ${SOURCES})
+add_executable(${PROJECT_NAME} 
+        ${inc_files} 
+        ${src_files} 
+        ${gizmo_inc_files} 
+        ${gizmo_src_files} 
+        ${SOURCES}
+)
 
-message(STATUS ${ASSIMP_INCLUDE_DIR})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt::Core
     Qt::Gui
@@ -49,6 +58,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Qt::Core
     Qt::Widgets
     Qt6::Concurrent
     OpenMP::OpenMP_CXX
+    ${OIDN_LIBRARIES}
     optimized 	${ASSIMP_LIBRARY_RELEASE}
 	debug		${ASSIMP_LIBRARY_DEBUG}
 )
@@ -56,15 +66,18 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Qt::Core
 if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
       # COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> $<TARGET_FILE_DIR:${PROJECT_NAME}>
-      COMMAND ${CMAKE_COMMAND} -E copy ${ASSIMP_ROOT_DIR}/dlls/assimp-${ASSIMP_MSVC_VERSION}-mtd.dll 	${CMAKE_BINARY_DIR}/assimp-${ASSIMP_MSVC_VERSION}-mtd.dll
-      #COMMAND ${CMAKE_COMMAND} -E copy ${ASSIMP_ROOT_DIR}/bin/Release/assimp-${ASSIMP_MSVC_VERSION}-mt.dll  ${CMAKE_BINARY_DIR}/assimp-${ASSIMP_MSVC_VERSION}-mt.dll
+      COMMAND ${CMAKE_COMMAND} -E copy ${ASSIMP_ROOT_DIR}/dlls/assimp-${ASSIMP_MSVC_VERSION}-mtd.dll 	${CMAKE_BINARY_DIR}
       COMMAND_EXPAND_LISTS
      )
 elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
       # COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> $<TARGET_FILE_DIR:${PROJECT_NAME}>
-      #COMMAND ${CMAKE_COMMAND} -E copy ${ASSIMP_ROOT_DIR}/bin/Debug/assimp-${ASSIMP_MSVC_VERSION}-mtd.dll 	${CMAKE_BINARY_DIR}/assimp-${ASSIMP_MSVC_VERSION}-mtd.dll
-      COMMAND ${CMAKE_COMMAND} -E copy ${ASSIMP_ROOT_DIR}/dlls/assimp-${ASSIMP_MSVC_VERSION}-mt.dll  ${CMAKE_BINARY_DIR}/assimp-${ASSIMP_MSVC_VERSION}-mt.dll
+      COMMAND ${CMAKE_COMMAND} -E copy ${ASSIMP_ROOT_DIR}/dlls/assimp-${ASSIMP_MSVC_VERSION}-mt.dll  ${CMAKE_BINARY_DIR}
       COMMAND_EXPAND_LISTS
      )
 endif()
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy ${OIDN_LIB_DIR}/OpenImageDenoise.dll ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND ${CMAKE_COMMAND} -E copy ${OIDN_LIB_DIR}/tbb.dll ${CMAKE_CURRENT_BINARY_DIR}
+)
